language/move-lang/tests/move_check/typing/block_single_expr_invalid.exp
error: 

   ┌── tests/move_check/typing/block_single_expr_invalid.move:4:12 ───
   │
 4 │         ({ 0 } : bool);
   │            - The type: integer
   │                  ---- Is not compatible with: 'bool'
   │                  ^^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_single_expr_invalid.move:5:12 ───
   │
 5 │         ({ &0 } : u64);
   │            -- The type: '&{integer}'
   │                   --- Is not compatible with: 'u64'
   │                   ^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_single_expr_invalid.move:6:12 ───
   │
 6 │         ({ &mut 0 } : ());
   │            ------ The type: '&mut {integer}'
   │                       -- Is not compatible with: '()'
   │                       ^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_single_expr_invalid.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 7 │         ({ R {} } : R);
   │         ^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   │                     - The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/block_single_expr_invalid.move:8:12 ───
   │
 8 │         ({ (0, false, false) } : (u64, bool));
   │            ----------------- The expression list type of length 3: '({integer}, bool, bool)'
   │                                  ----------- Is not compatible with the expression list type of length 2: '(u64, bool)'
   │                                  ^^^^^^^^^^^ Invalid type annotation
   │

